# fast-vec

./: default.nix  fast-vec.cabal
src/Data/: Sigma.hs
src/Data/Vector/: Sized.hs
src/Data/Vector/Generic/: Sized.hs
src/Data/Vector/Generic/Internal/: Sized.hs
src/Data/Vector/Generic/Mutable/: Sized.hs
src/Data/Vector/Generic/New/: Sized.hs
src/Data/Vector/Internal/: Sized.hs
src/Data/Vector/Storable/: Sized.hs
src/Data/Vector/Unboxed/: Instances.hs  Sized.hs
