name:                fast-vec
version:             0.1.0.0
synopsis:            Length indexed vectors with identical performance to vector
description:         This package wraps vector with a well typed length and ensures
                     all functions are total.
license:             MIT
license-file:        LICENSE
author:              Kyle McKean
maintainer:          mckean.kylej@gmail.com
category:            Data
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  -- exposed-modules:     
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.9 && <4.10
                     , fast-nats >= 0.1 && < 0.2
  hs-source-dirs:      src
  default-language:    Haskell2010
